--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                   <ul>
                     <li><a href="#">Eur</a></li>
                     <li><a href="#">Usd</a></li>
+                    <li><a href="#">Usd</a></li>
+                    <li><a href="#">Usd</a></li>
                   </ul>
                 </div>
                 <!-- End .header-menu -->
