--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
                     <li><a href="#">English</a></li>
                     <li><a href="#">French</a></li>
                     <li><a href="#">Spanish</a></li>
+                    <li><a href="#">Spanish</a></li>
+                    <li><a href="#">Spanish</a></li>
                   </ul>
                 </div>
                 <!-- End .header-menu -->
